# falcon-stream

./: .gitignore  CMakeLists.txt  README.md  makeNodeAddon.sh  makeTSNode.sh  package-lock.json  package.json
dep/: CMakeLists.txt
lib/: falcon1024.d.ts  falcon1024.d.ts.map  falcon1024.js  falcon1024.js.map  falconStream.d.ts  falconStream.d.ts.map  falconStream.js  falconStream.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  node-falcon-stream.d.ts  node-falcon-stream.node
readmeHeader/: readhead.md
scripts/: clean.js  move.js
src/: CMakeLists.txt  falcon-stream.cc  falcon-stream.h  falcon1024.ts  falconStream.ts  index.ts
test/: test.js
